# assignment-03

./: README.md  main.py  pdf_agent.db-shm  pdf_agent.db-wal  pdf_agent.py  pyproject.toml
notebooks/: exercises_solved.ipynb  first_ai_agent.ipynb
